# VoiceLint

./: CMakeLists.txt  README.md
config/: config.json
res/prompt/: refine.txt  summarize.txt
src/: CMakeLists.txt  asr.cpp  asr.h  audio.cpp  audio.h  llm.cpp  llm.h  main.cpp  ui.cpp  ui.h
